# rspack-bazel-test

./: .bazelignore  .bazeliskrc  .eslintignore  .gitignore  .prettierignore  MODULE.bazel
tools/jsts/: BUILD  defs.bzl  package.json  pnpm-lock.yaml
tools/lint/: BUILD  package.json  pnpm-lock.yaml
